--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,7 @@
----
-
----
-<nav class="nav-links">
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
-  <a href="/tags/">Tags</a>
+<nav>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about/">About</a></li>
+    <li><a href="/blog/">Blog</a></li>
+  </ul>
 </nav>
