--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,39 +6,32 @@ const { frontmatter } = Astro.props;
 
 <BaseLayout pageTitle={frontmatter.title}>
   <p><em>{frontmatter.description}</em></p>
-  <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
-
-  <p>Written by: {frontmatter.author}</p>
-
-  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-
+  <p class="publication-date">Published on: {new Date(frontmatter.pubDate).toLocaleDateString()}</p>
   <slot />
-  <div class="tags">
+  <ul class="tags">
     {
       frontmatter.tags.map((tag: string) => (
-        <p class="tag">
+        <li class="tag">
           <a href={`/tags/${tag}`}>{tag}</a>
-        </p>
+        </li>
       ))
     }
-  </div>
+  </ul>
 </BaseLayout>
 <style>
-  a {
-    color: #00539f;
-  }
-
   .tags {
     display: flex;
+    gap: 1rem;
     flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
   }
 
-  .tag {
-    margin: 0.25em;
-    border: dotted 1px #a1a1a1;
-    border-radius: 0.5em;
-    padding: 0.5em 1em;
-    font-size: 1.15em;
-    background-color: #f8fcfd;
+  .tag::before {
+    content: "#";
+  }
+
+  .publication-date {
+    font-size: var(--font-size-small);
   }
 </style>
