--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,24 @@
+:root {
+  --color-black: #0c0f11;
+  --color-white: #ffffff;
+  --color-primary: #ce4257;
+  --color-primary-hover: color-mix(
+    in oklab,
+    var(--color-primary) 85%,
+    var(--color-black)
+  );
+  --color-secondary: #ece4b7;
+
+  --font-size-normal: 1rem;
+  --font-size-small: 0.7rem;
+
+  --font-family-monospace: "Courier New", Courier, monospace;
+}
+
 html {
-  background-color: #f1f5f9;
+  background-color: var(--color-black);
   font-family: sans-serif;
+  color: var(--color-white);
 }
 
 body {
@@ -16,32 +34,60 @@ body {
 }
 
 h1 {
-  margin: 1rem 0;
+  margin: 1rem 0 2rem 0;
   font-size: 2.5rem;
+  border-bottom: 0.2rem solid var(--color-secondary);
+  font-family: var(--font-family-monospace);
 }
 
-.nav-links {
-  width: 100%;
+a {
+  color: var(--color-white);
+  text-decoration: none;
+  border-bottom: 1px solid var(--color-primary);
+}
+
+nav {
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
   display: none;
   margin: 0;
 }
 
-.nav-links a {
+nav ul {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  padding: 0;
+}
+
+nav a {
   display: block;
   text-align: center;
   padding: 10px 0;
-  text-decoration: none;
-  font-size: 1.2rem;
   font-weight: bold;
-  text-transform: uppercase;
+  color: var(--color-white);
+  border-bottom: 0;
+  position: relative;
 }
 
-.nav-links a:hover,
-.nav-links a:focus {
-  background-color: #ff9776;
+nav li a:after {
+  content: "";
+  height: 0px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  position: absolute;
+  transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  z-index: -1;
+  border-bottom: 0.2rem solid var(--color-primary);
+}
+
+nav a:hover:after,
+nav a:focus:after {
+  background-color: var(--color-primary);
+  border-bottom: 0.2rem solid var(--color-primary-hover);
+  height: 100%;
 }
 
 .expanded {
@@ -62,17 +108,14 @@ h1 {
 }
 
 @media screen and (min-width: 636px) {
-  .nav-links {
-    margin-left: 5em;
+  nav {
     display: block;
-    position: static;
-    width: auto;
     background: none;
   }
 
-  .nav-links a {
+  nav a {
     display: inline-block;
-    padding: 15px 20px;
+    padding: 0.5rem 1rem;
   }
 
   .hamburger {
