--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 :root {
   --color-black: #0c0f11;
-  --color-white: #ffffff;
+  --color-white: #e3e3e3;
   --color-primary: #ce4257;
   --color-primary-hover: color-mix(
     in oklab,
@@ -46,79 +46,3 @@ a {
   border-bottom: 1px solid var(--color-primary);
 }
 
-nav {
-  top: 5rem;
-  left: 48px;
-  display: none;
-  margin: 0;
-}
-
-nav ul {
-  display: flex;
-  gap: 1rem;
-  list-style: none;
-  padding: 0;
-}
-
-nav a {
-  display: block;
-  text-align: center;
-  padding: 10px 0;
-  font-weight: bold;
-  color: var(--color-white);
-  border-bottom: 0;
-  position: relative;
-}
-
-nav li a:after {
-  content: "";
-  height: 0px;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  position: absolute;
-  transition: all 0.3s ease 0s;
-  -webkit-transition: all 0.3s ease 0s;
-  z-index: -1;
-  border-bottom: 0.2rem solid var(--color-primary);
-}
-
-nav a:hover:after,
-nav a:focus:after {
-  background-color: var(--color-primary);
-  border-bottom: 0.2rem solid var(--color-primary-hover);
-  height: 100%;
-}
-
-.expanded {
-  display: unset;
-}
-
-.hamburger {
-  padding-right: 20px;
-  cursor: pointer;
-}
-
-.hamburger .line {
-  display: block;
-  width: 40px;
-  height: 5px;
-  margin-bottom: 10px;
-  background-color: #ff9776;
-}
-
-@media screen and (min-width: 636px) {
-  nav {
-    display: block;
-    background: none;
-  }
-
-  nav a {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-  }
-
-  .hamburger {
-    display: none;
-  }
-}
