Content: About page update

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ const identity = {
   firstName: "Elke",
   country: "Belgium",
   occupation: "Frontend developer",
-  hobbies: ["photography", "dungeons & dragons", "running"],
+  hobbies: ["photography", "Dungeons & Dragons", "running"],
 };
 
 const skills = [
@@ -16,37 +16,13 @@ const skills = [
   "CSS",
   "JavaScript",
   "React",
-  "Astro",
   "TypeScript",
   "Vue",
   "Nx",
 ];
-const happy = true;
-const finished = false;
-const goal = 3;
-
-const skillColor = "red";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <style define:vars={{ skillColor }}>
-    .skill {
-      color: green;
-      color: var(--skillColor);
-      font-weight: bold;
-    }
-  </style>
-  <h2>... and my new Astro site!</h2>
-
-  <p>
-    I am working through Astro's introductory tutorial. This is the second page
-    on my website, and it's the first one I built myself!
-  </p>
-
-  <p>
-    This site will update as I complete more of the tutorial, so keep checking
-    back and see how my journey is going!
-  </p>
   <p>Here are a few facts about me:</p>
   <ul>
     <li>My name is {identity.firstName}.</li>
@@ -54,9 +30,9 @@ const skillColor = "red";
       I live in {identity.country} and I work as a {identity.occupation}.
     </li>
     {
-      identity.hobbies.length >= 2 && (
+      identity.hobbies.length >= 3 && (
         <li>
-          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
+          Three of my hobbies are: {identity.hobbies[0]}, {identity.hobbies[1]} and {identity.hobbies[2]}
         </li>
       )
     }
@@ -65,15 +41,5 @@ const skillColor = "red";
   <ul>
     {skills.map((skill) => <li class="skill">{skill}</li>)}
   </ul>
-  {happy && <p>I am happy to be learning Astro!</p>}
-
-  {finished && <p>I finished this tutorial!</p>}
-
-  {
-    goal === 3 ? (
-      <p>My goal is to finish in 3 days.</p>
-    ) : (
-      <p>My goal is not 3 days.</p>
-    )
-  }
+  <p>and since creating this website: Astro!</p>
 </BaseLayout>
