Finished first version of home page and upgraded astro

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -32,6 +32,6 @@ const { frontmatter } = Astro.props;
   }
 
   .publication-date {
-    font-size: var(--font-size-small);
+    font-size: var(--font-size-xs);
   }
 </style>
