--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,8 +10,9 @@
   );
   --color-secondary: #ece4b7;
 
-  --font-size-normal: 1rem;
-  --font-size-small: 0.7rem;
+  --font-size-md: 1rem;
+  --font-size-sm: 0.8rem;
+  --font-size-xs: 0.7rem;
 
   --font-family-serif: "Newsreader", serif;
   --font-family-monospace: "Courier New", Courier, monospace;
@@ -58,7 +59,7 @@ h3 {
 }
 
 p {
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-md);
   line-height: 1.75rem;
 }
 
