--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,11 +2,21 @@
 import BaseLayout from "./BaseLayout.astro";
 
 const { frontmatter } = Astro.props;
+
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
   <p><em>{frontmatter.description}</em></p>
-  <p class="publication-date">Published on: {new Date(frontmatter.pubDate).toLocaleDateString()}</p>
+  <p class="publication-date">
+    Published on: {
+      new Date(frontmatter.pubDate).toLocaleDateString(undefined, {
+        weekday: "long",
+        year: "numeric",
+        month: "long",
+        day: "numeric",
+      })
+    }
+  </p>
   <slot />
   <ul class="tags">
     {
