--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import profilePicture from "../images/elke.jpg";
 ---
 
-<div class="hero">
+<section class="hero">
   <Image
     src={profilePicture}
     alt="Photo of Elke"
@@ -18,7 +18,7 @@ import profilePicture from "../images/elke.jpg";
     biggest adventure is raising my amazing son with my beautiful wife. On this
     blog, I'll share my insights on tech, code snippets, hobbies, and more.
   </span>
-</div>
+</section>
 
 <style>
   .hero {
