--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,5 +34,5 @@ const { pageTitle } = Astro.props;
     <a href="/" class="sitename">&lt;ElkeCodes👩‍💻 /&gt;</a>
     <Navigation />
   </div>
-  <h1>{pageTitle}</h1>
+  <h1 id="title">{pageTitle}</h1>
 </header>
