Added more presentations and some styling changes to the website

--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -23,11 +23,13 @@ import profilePicture from "../images/elke.jpg";
 <style>
   .hero {
     background: var(--color-gray);
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 1rem;
+    border: 1px solid var(--color-light-gray);
   }
   .hero .picture {
     border-radius: 100%;
+    border: 1px solid var(--color-light-gray);
     height: 100px;
     width: 100px;
     shape-outside: circle(50%);
