--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,16 @@
   --color-black: #0c0f11;
   --color-white: #e3e3e3;
   --color-gray: #24292e;
+  --color-lighter-gray: color-mix(
+    in oklab,
+    var(--color-gray) 50%,
+    var(--color-white)
+  );
+  --color-light-gray: color-mix(
+    in oklab,
+    var(--color-gray) 80%,
+    var(--color-white)
+  );
   --color-dark-gray: color-mix(
     in oklab,
     var(--color-gray) 30%,
@@ -47,7 +57,7 @@ body {
 }
 
 h1 {
-  margin: 3rem 0 2rem 0;
+  margin: 5rem 0 2rem 0;
   font-size: 2.5rem;
   border-bottom: 0.2rem double var(--color-secondary);
   font-family: var(--font-family-serif);
@@ -55,14 +65,14 @@ h1 {
 }
 
 h2 {
-  margin: 2rem 0 0.5rem 0;
+  margin: 3rem 0 0rem 0;
   font-family: var(--font-family-serif);
   font-weight: 400;
   font-size: 2rem;
 }
 
 h3 {
-  margin: 1rem 0 0.5rem 0;
+  margin: 2rem 0 0rem 0;
   font-family: var(--font-family-serif);
   font-weight: 400;
   font-size: 1.5rem;
@@ -71,6 +81,7 @@ h3 {
 p {
   font-size: var(--font-size-md);
   line-height: var(--line-height-md);
+  text-align: justify;
 }
 
 p img {
@@ -93,6 +104,7 @@ a {
 pre {
   padding: 0.5rem 0.6rem;
   border-radius: 0.5rem;
+  border: 1px solid var(--color-light-gray);
   background: var(--color-gray);
 }
 
@@ -139,4 +151,19 @@ table tr:last-child {
 table td,
 table th {
   padding: 0.2rem 0.5rem;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  background: var(--color-primary);
+  color: var(--color-white);
+  border: 0;
+  border-radius: 0.5rem;
+  /* border: 1px solid var(--color-primary-hover); */
+  transition: background-color 0.5s;
+}
+
+button:hover {
+  background: var(--color-primary-hover);
+  cursor: pointer;
 }
